--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -59,7 +59,7 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>6</number>
+      <number>0</number>
      </property>
      <widget class="QScrollArea" name="generalTab">
       <property name="widgetResizable">
@@ -1292,18 +1292,9 @@
                         </widget>
                       </item>
                       <item>
-                        <widget class="QLabel" name="label_Custom_Trophy">
+                        <widget class="QPushButton" name="OpenCustomTrophyLocationButton">
                           <property name="text">
-                            <string>It is possible to add custom images to the trophies.
-Add the files to custom_trophy with the following names:
-bronze.png, gold.png, platinum.png, silver.png</string>
-                          </property>
-                        </widget>
-                      </item>
-                      <item>
-                        <widget class="QPushButton" name="OpenCustom_trophyLocationButton">
-                          <property name="text">
-                            <string>Open custom_trophy folder</string>
+                            <string>Open custom trophy image folder</string>
                           </property>
                         </widget>
                       </item>
