Adding top button option for trophy pop up

--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -1285,7 +1285,13 @@
                     <string>Trophy Notification Position</string>
                    </property>
                   </widget>
-                 </item>
+				 <item>
+				  <widget class="QRadioButton" name="radioButton_Top">
+				   <property name="text">
+				    <string>Top</string>
+				   </property>
+				  </widget>
+				  </item>
                  <item>
                   <widget class="QRadioButton" name="radioButton_Left">
                    <property name="text">
