--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -1285,6 +1285,7 @@
                     <string>Trophy Notification Position</string>
                    </property>
                   </widget>
+                 </item>
 				 <item>
 				  <widget class="QRadioButton" name="radioButton_Top">
 				   <property name="text">
