--- a/src/shadps4.qrc
+++ b/src/shadps4.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>images/shadps4.ico</file>
+        <file>images/shadps4.svg</file>
         <file>images/about_icon.png</file>
         <file>images/dump_icon.png</file>
         <file>images/play_icon.png</file>
