Wip implementation of isdevkit and neo mode to experimental tab.

--- a/src/qt_gui/settings_dialog.ui
+++ b/src/qt_gui/settings_dialog.ui
@@ -2079,7 +2079,31 @@
        </layout>
       </widget>
      </widget>
-    </widget>
+    <widget class="QWidget" name="experimentalTab">
+		<attribute name="title">
+			<string>Experimental
+		</string>
+		</attribute>
+		<layout class="QVBoxLayout" name="verticalLayout_experimental">
+			<item>
+				<widget class="QCheckBox" name="isDevKitCheckBox">
+					<property name="text">
+						<string>Enable DevKit Mode
+						</string>
+					</property>
+				</widget>
+			</item>
+			<item>
+				<widget class="QCheckBox" name="isNeoModeCheckBox">
+					<property name="text">
+						<string>Enable Neo Mode
+						</string>
+					</property>
+				</widget>
+			</item>
+		</layout>
+	</widget>
+	</widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
